* 20020301 : v5.00 (0.5.1)
	* Merge the Functions menus.
	* Some calcs do not support the Ready function. Do not display
	a possibly erroneous "calc is ready" message.
	* Remove the Home and End key from RCTextView. Their keycodes are
	greater than 8000, they are not honoured by the calcs.
	* Map "pi" in the remote control (RCTextView) (alt + p).
	* Clean up the RCTextView in case the window was used previously.
	* Use sheets for pbars, save panels and open panels only.
* 20020302 : v5.00 (0.5.2)
	* Fixed NSImageView size on the screendump window.
	* Use ticalc_folder_type() to determine whether we have a var
	or a folder when parsing the dirlist.
	* FLASH apps must be > 1 in size.
* 20020305 : v5.01 (0.5.2)
	* Merge up to 5.01.
	* Do not try to process the dirlist for FLASH Apps if the
	calculator does not support FLASH Apps.
* 20020511 : v5.01 (0.5.3)
	* Converted to ProjectBuilder 2.0 Beta.
	* Fixed double-confirmation bug when overwriting files.
	* Fixed Modal session for userX_box.
* 20020512 : v5.08 (0.5.4)
 	* Merge up to 5.08.
	* Added BMP screen dump format.
	* Removed "ROM Version" menu item and callback.
	* Changed "ROM Dump" key combo for one that was not already used.
* 20020601 : v5.08 (0.5.5)
	* Rewrote the remote control.
	* Make the remote control window resizable.
	* Merge Calc{89,92}KeyboardController into CalcKeyboardController.
	* Skin loading uses the skinedit SkinController class.
	* Use TiEmu v2.00 skins.	
* 20020602 : v5.08 (0.6.0)
	* Set title on userX_box and dlgboxentry when not displayed as sheet.
	* Fix userX_box and dlgboxentry so the text is displayed correctly. At last.
	* Fix dirlist wrt FLASH apps with libticalcs >= 3.3.2.
* 20020602 : v5.11 (0.6.0)
	* Merge up to 5.11.
	* Fix separator in userX_box and dlgboxentry.
	* Fix memory information wrt FLASH Apps with libticalcs >= 3.3.2.
	* Accept FLASH Apps and ROM upgrades when dropped on the dirlist.
	  Thanks Romain for this one, it comes with TiLP 5.11 :)






	